2008-12-02  Adam Roben  <aroben@apple.com>

        Build fix for Windows projects with NOMINMAX defined globally

        * platform/win/COMPtr.h: Don't redefine NOMINMAX if it's already
        defined.

2008-12-02  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Build JavaScriptCore into libQtWebKit.so through a direct build
        instead of a static library. When linking a static library into
        a shared library qmake generates an incorrect .prl file, which
        causes all sorts of different build problems when linking against
        QtWebKit. Fixing this in qmake requires bigger changes that are
        currently not possible, so we need to work around this limitation
        for now. The advantages of the separate build did not outweight the
        build problems it caused.

        * WebCore.pro: include JavaScriptCore.pri, re-enable prl support
        and rename the lut generator to domlut to avoid a conflict with
        JavaScriptCore.pri's lut generator.

2008-12-02  David Levin  <levin@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=22588
        Move securityOrigin() from Document and WorkerContext into ScriptExecutionContext.

        No observable change in behavior, so no test.
        
        * dom/Document.cpp:
        (WebCore::Document::open):
        (WebCore::Document::domain):
        (WebCore::Document::setDomain):
        (WebCore::Document::initSecurityContext):
        (WebCore::Document::setSecurityOrigin):
        * dom/Document.h:
        * dom/ScriptExecutionContext.cpp:
        (WebCore::ScriptExecutionContext::setSecurityOrigin):
        * dom/ScriptExecutionContext.h:
        (WebCore::ScriptExecutionContext::securityOrigin):
        * dom/WorkerContext.cpp:
        (WebCore::WorkerContext::WorkerContext):
        * dom/WorkerContext.h:
        These changes are for the move of securityOrigin().
        