@@ -1,3 +1,14 @@
+2008-12-01 Laszlo Gombos <laszlo.1.gombos@nokia.com>
+
+        Reviewed by Tor Arne Vestbø.
+
+        MinGW compilation fix for PluginPackageWin.cpp
+
+        https://bugs.webkit.org/show_bug.cgi?id=22585
+
+        * plugins/win/PluginPackageWin.cpp:
+        (WebCore::PluginPackage::fetchInfo):
+
 2008-12-02  Adam Roben  <aroben@apple.com>
 
         Build fix for Windows projects with NOMINMAX defined globally
